# lightda-core

./: CMakeLists.txt  Config.cmake.in  LICENSE  README.md  advect1d.f90  advect1d.py  advect1d_assimilate.f90  advect1d_assimilate_interfaces.F90  advect1d_assimilate_interfaces.f90  advect1d_forward_operator.F90  advect1d_localizer.F90  advect1d_observations.F90  animate.py  animate_mpi.py  assimilate.F90  assimilate.f90  assimilation_batch_manager.F90  assimilation_batch_manager.f90  assimilation_filter.F90  assimilation_manager.F90  assimilation_model_interface.F90  assimilation_model_interface.f90  base_assimilation_manager.F90  darray.F90  dgemm.f  dgemm.pyf  dummy_assimilator.f90  enkf.py  exceptions.F90  forward_operator.F90  hdf5_exceptions.F90  lenkf-rsm.md.in  lenkf_rsm_c.f90  lenkf_rsm_filter.F90  lenkf_rsm_py.py  libsuffix.py  lightda.md.in  list.f90  localization.f90  mpi_types.h  (+6 more)
cmake/modules/: lenkf_functions.cmake  lightda_functions.cmake
src/: CMakeLists.txt  CMakelists.txt  advect1d.f90  advect1d_forward_operator.F90  assimilation_batch_manager.F90  assimilation_filter.F90  assimilation_manager.F90  assimilation_model_interface.F90  base_assimilation_manager.F90  darray.F90  ensemble_operator.F90  forward_operator.F90  hdf5_exceptions.F90  list.f90  localization.f90  observation_manager.F90  observations.F90  per_member_model_interface.F90  random.f90  random_integer.f90  util.F90
superbuild/: CMakeLists.txt
system_mpi/: system_mpi.F90
tests/: CMakeLists.txt  advect1d_model_interface_tests.F90  advect1d_model_interface_tests.f90  assimilation_manager_tests.F90  batch_manager_tests.F90  batch_manager_tests.f90  batch_manager_tests_parallel.F90  darray_tests.F90  dummy_assimilator.f90  dummy_assimilator_tests.F90  dummy_model_forward_operator.F90  dummy_model_interface_tests.f90  dummy_model_interfaces.F90  dummy_model_interfaces.f90  exception_tests.f90  model_interface_tests.f90  per_member_dummy_model_interface.F90  random_observations.F90  test_and_check_regex.cmake  test_darray.F90  test_exception_fail.f90  test_exception_fail_implicit.f90  test_exception_pass.f90  util_tests.f90
